Lev3_3_Project_css-einführung_Illustration_v0.0.3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ footer{
     width:3px;
     height:3px;
     border-radius:50%;
-    background: gold;
+    background: orange;
     display:inline-block;
 }
 .atw::before{
